[project]
name = "usertop"
description = "Lists currently running processes with full names of users"
version = "0.1.0"
authors = [
    { name = "Aniruddha Deb", email = "cs1200869@iitd.ac.in" }
]

dependencies = [
    "libusers",
    "psutil"
]

[project.scripts]
usertop = "usertop.__main__:main"

[project.optional-dependencies]
dev = [
    "tox",
    "pre-commit",
    "bump2version"
]
